<resources>
    <dimen name="activityPadding">16dp</dimen>
    <dimen name="placeholderImage">60dp</dimen>
    <dimen name="placeholderTextHeight">8dp</dimen>
    <dimen name="padding_10">10dp</dimen>
    <string name="app_name">NoteKeeper</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="feedback">Please leave feedback about our features in this application. And it would be very helpful if you could suggest us to improve our features.</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign up Now!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Guest User</string>
    <string name="action_search">Search</string>
    <string name="facebook_application_id" translatable="false">2448040282118815</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb2448040282118815</string>
    <string name="menu_home">Study Library</string>
    <string name="menu_upload">Upload Study Material</string>
    <string name="menu_lost_found">Lost and Found</string>
    <string name="menu_ask_questions">Ask Questions</string>
    <string name="menu_logout">Logout</string>

    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="brain_teaser">Brain Teaser</string>
    <string name="buy_products">Buy Products</string>
    <string name="sell_products">Sell Products</string>
    <string name="question_hint">Start your question with "What","How","Why",etc.</string>
    <string name="sample_question">What are the algorithms required to solve all problems (using c++) in any competitive coding contest?</string>
    <string name="answer_owner_hint">Sunil Kumar at 14:50 on 21 oct,2019</string>
    <string name="long_description">Layout-Based behaviors are used to shift one view at some other place when you perform a certain task. For example, create a project in Android Studio with Basic Activity template. Now, run the application on your mobile. You will find a Floating Action Button on the screen. Just press the button and you will find a snackbar coming from the bottom of the screen. At the same time, you will notice that the Floating Action Button has moved upwards. After a few seconds the button will again come back to its original position.</string>
    <string name="google_text">Connect your NoteKeeper account to your Google account for simplicity and ease.</string>
    <string name="faq_help"><![CDATA[FAQ & Help]]></string>
    <string name="sample_desc">If this describes you, consider joining us as an intern in the winter of 2020! Amazon interns have the opportunity to work alongside the industry’s brightest engineers who innovate everyday on behalf of our customers. Our interns write real software and partner with a select group of experienced software development engineers who help interns on projects that matter to our customers.</string>
    <string name="mobile_verify_desc">We will send you a one time password. Carrier rate may apply.</string>


    <integer-array name="course_images">

    </integer-array>
    <string-array name="course_titles">
        <item>Computer Science Engineering</item>
        <item>Information Technology Engineering</item>
        <item>Civil Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Electrical Engineering</item>
        <item>Chemical Engineering</item>
        <item>Bio Engineering</item>
        <item>School of Agriculture</item>
        <item>School of Business</item>
        <item>Fashion Technology</item>
        <item>School of Law and Policy</item>
        <item>Quantitative Aptitude</item>
        <item>Verbal Ability</item>
        <item>Logical Reasoning</item>
        <item>Verbal Reasoning</item>
    </string-array>


</resources>
