<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_university"
            android:title="@string/menu_home" />
        <item
            android:icon="@drawable/ic_upload"
            android:title="@string/menu_upload" />
        <item
            android:id="@+id/nav_ask_quora"
            android:icon="@drawable/ic_blackboard_1"
            android:title="@string/menu_ask_questions" />
        <item
            android:icon="@drawable/ic_buy_sell"
            android:title="@string/menu_sell_buy" />
        <item
            android:icon="@drawable/ic_books_1"
            android:title="@string/menu_study_material" />
        <item
            android:icon="@drawable/ic_lost_items"
            android:title="@string/menu_lost_found" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
