<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient_login"
    tools:context=".authentication.LoginActivity">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_atom"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#AFA1A1"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#F44336"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#AFA1A1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#F44336"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_business_black_24dp"
                android:drawablePadding="5dp"
                android:hint="Organization"
                android:inputType="text"
                android:textColor="#000000"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#AFA1A1"
        app:boxBackgroundColor="@color/white"
        app:boxStrokeColor="#F44336"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_vpn_key_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/hint_password"
            android:inputType="textVisiblePassword"
            android:textColor="#000000"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#AFA1A1"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="#F44336"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                android:drawablePadding="5dp"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I have read and accept the Privacy Policy"
            android:textColor="#000"
            android:textSize="12sp"
            />
       <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
