<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login"
    android:fitsSystemWindows="true"
    tools:context=".authentication.LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_graduate"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#AFA1A1"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#F44336"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHint="@android:color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#AFA1A1"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="#F44336"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_vpn_key_black_24dp"
                    android:drawablePadding="5dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/container_4"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/submit_love"
                    android:text="Login"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/submit_love"
                    android:text="SignUp"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:gravity="center"
                android:id="@+id/btn_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="#F44336" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                >
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_gravity="center"
                    android:background="#808080"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="OR"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:textAllCaps="true"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    />
            </FrameLayout>
            <Button
                android:layout_width="wrap_content"
                android:text="Continue with Google"
                android:background="@drawable/google_btn"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/loginGoogle"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:drawablePadding="@dimen/padding_10"
                android:drawableLeft="@drawable/ic_google"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
